# OpenPL

./: CMakeLists.txt  config.mk  makefile  openpl.config  readme.txt  structures.xml  testlist.txt
ClPlatform/: ClPlatfomCMakeLists.txt  ClPlatform.mk  TestClPlatformCMakeLists.txt
ClPlatform/Include/: ClArrayMemory.hpp  ClArrayMemoryWithSize.hpp  ClCalibrator.hpp  ClClasses.hpp  ClDataGeneratorComposite.hpp  ClDataGeneratorFromFileReader.hpp  ClDeviceInfo.hpp  ClError.hpp  ClIncludePreprocessor.hpp  ClKernel.hpp  ClKernelCallStats.hpp  ClKernelFactory.hpp  ClKernelFromBinaryLoader.hpp  ClKernelFromSourceLoader.hpp  ClKernelManager.hpp  ClKernelPerformanceComparator.hpp  ClKernelSaver.hpp  ClMemory.hpp  ClMemoryMaterialPointSOAWithSize.hpp  ClParameter.hpp  ClParameterizedKernel.hpp  ClParameterizedKernelFromSource.hpp  ClPlatform.hpp  ClSelfCalibratingKernel.hpp  (+8 more)
Clcc/: Clcc.mk  ClccCMakeLists.txt
Common/: CommokCMakeLists.txt  Common.mk  TestCommonCMakeLists.txt
Makefiles/: AutogenSource.mk  IncludeDirectories.mk
Script/: GenerateStructures.pl  RunSingleTest.sh  RunTests.sh  build.sh  filenames.sh
Simulation/: structures.xml
Test/: regresion.list
Test/simple_aritmetics/: CMakeLists.txt  SimpleAritmetics.mk  TestSimpleAritmeticsMain.cpp  TestSimpleAritmeticsSim.cpp  TestSimpleAritmeticsSim.hpp  aritmetic.cpp  aritmetic.hpp  main.cpp  makefile
clinclude/: crossOperation.cl  material_point.cl  material_point_move.cl  material_point_nbody.cl  matrix_determinant.cl  matrix_float_3x3.cl  matrix_float_4x4.cl  matrix_invert.cl  matrix_multiply.cl
src/: clcc.cpp
(+398 files in other folders)
